// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders components/flex/demo/basic.tsx correctly 1`] = `
<div
  class="ant-flex ant-flex-align-center ant-flex-justify-center"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
</div>
`;

exports[`renders components/flex/demo/with-gap.tsx correctly 1`] = `
<div
  class="ant-flex ant-flex-gap-small"
  style="flex:0 1 auto"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
</div>
`;
